--- a/css/footer.css
+++ b/css/footer.css
@@ -9,11 +9,16 @@
 .footer {
 	position: relative; //VERY IMPORTANT in combination with negative margin. links and pseudoclasses work fine.
 	width: 100%;
-	max-width: 1200px;
 	height: 50px;
 	margin: 0px auto;
 	margin-top: -50px;
 	background-color: #414141;
+}
+
+.footer_container {
+	max-width: 1200px;
+	margin: 0px auto;
+	background-color: blue;
 }
 
 .footer_conf {
