--- a/css/index.css
+++ b/css/index.css
@@ -6,20 +6,20 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	background-color: #f6f6f6 ;
+	
 }
 
 .wrapper {
 	min-height: 100%;
 	overflow: hidden;
 	position: relative;
+	background-color: #f6f6f6 ;
 }
 
 .container {
 	max-width: 1200px;
-	margin: 0 auto;
+	margin: 0px auto;
 }
-
 
 .empty {
 	height: 50px;
