--- a/css/header.css
+++ b/css/header.css
@@ -63,12 +63,15 @@
 	padding: 0px;
 	font-size: 18px;
 	font-family: "FiraSan Light";
+	
 }
 
 
 .header_contacts a {
 	text-decoration: none;
 	padding: 0px ;
+	color: #414141;
+
 }
 
 .header_contacts > a {
@@ -78,13 +81,102 @@
 
 }
 
-.cont_pallete {
+.cont_pallete {	
 	position: absolute;
+	display: none;
+	bottom: -153px;
+	left: -35px;
+	z-index: 10;
+	background: #ffffff;
+	border: 1px solid #dedede;
+	border-radius: 10px;
+	width: 193px;
+	height: 135px;
 	margin: 0px;
 	padding: 0px;
+	list-style: none;
+
 }
 
 
-.cont_pallete_list {
+.header_contacts:hover .cont_pallete {
+	display: block;
+}
 
+.header_contacts:hover > a {
+	color: #e96668;
+	border-bottom-color: #e96668;
+}
+
+
+.cont_pallete:before, .cont_pallete:after {
+	position: absolute;
+	content: '';
+	width: 0px;
+	height: 0px;
+	padding: 0px; 
+	border: solid transparent;
+	left: 50%;
+
+}
+
+.cont_pallete:before {
+	content: "";
+	border-top-width: 0px; 
+	border-right-width: 5px;
+	border-left-width: 5px;
+	border-bottom-width: 10px;
+	border-bottom-color: #ffffff;
+	z-index: 20;
+	bottom: 133px;
+	margin-left: -5px;
+
+}
+
+
+.cont_pallete:after {
+	content: "";
+	border-top-width: 0px; 
+	border-right-width: 7px;
+	border-left-width: 7px;
+	border-bottom-width: 12px;
+	border-bottom-color: #dedede;
+	z-index: 19;
+	bottom: 133px;
+	margin-left: -7px; 
+}
+
+
+.cont_pallete li {
+	position: relative;
+	width: 100%;
+	height: 44px;
+	border-bottom: 1px solid #dedede;
+	line-height: 44px;
+	padding-left: 48px; 
+	
+}
+
+.cont_pallete li:before {
+	content: "";
+	position: absolute;
+	top: 15px;
+	left: 20px;
+	width: 20px;
+	height: 17px;
+	
+
+}
+
+
+.cont_pallete_email:before {
+	background: url(../images/css_sprites.png) no-repeat -10px -147px;	
+}
+
+.cont_pallete_tel:before {
+	background: url(../images/css_sprites.png) no-repeat -163px -86px;
+}
+
+.cont_pallete_skype:before {
+	background: url(../images/css_sprites.png) no-repeat -163px -49px;
 }
